cards  made responsive

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </header>
 
     <section class="main-body">
-      <h1>Him Village E-Prahari</h1>
+      <h1 id="main-body-heading">Him Village E-Prahari</h1>
       <p class="main-body-p"> You can guard, so let's protect together <p>
       <br><br><br>
-      <p class="main-body-des" >We are dedicated to preserving the natural beauty and ecological balance of the Himalayas: Himachal, and Uttarakhand by empowering rural communities. Through education, waste management, and sustainable practices, we stand as guardians of our environment. Join us in our mission to protect, nurture, and sustain the villages and forests of these regions for future generations.</p>
+      <p class="main-body-des">We are dedicated to preserving the natural beauty and ecological balance of the Himalayas: Himachal, and Uttarakhand by empowering rural communities. Through education, waste management, and sustainable practices, we stand as guardians of our environment. Join us in our mission to protect, nurture, and sustain the villages and forests of these regions for future generations.</p>
 
       <button class="main-body-btn">About Us</button>
     </section>
