mission section styling  responsive

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           <div class="team-cards">
             <div class="team-member">
               <div class="team-img">
-                <img loading="lazy" src="g4.jpg" alt="Team Member 1">
+                <img loading="lazy" src="./Sumit.jpg" alt="Team Member 1">
               </div>
               <div class="team-info">
                 <h6>Mr. Sumit Singh</h6>
