--- a/about.html
+++ b/about.html
@@ -1,9 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -29,16 +31,18 @@
     </div>
     <nav>
         <ul class="nav-links">
-            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="404.html">Gallery</a></li>
-            <li><a href="volunteer_signup.html">Volunteers</a></li>
+            <li><a href="./Voluntter/volunteer_signup.html">Volunteers</a></li>
             <li><a href="./Contact Us/contactUs.html">Contact Us</a></li>
         </ul>
     </nav>
     <i class="fa-solid fa-bars " onclick="toggleMenu()" ></i>
   </div>
+  </div>
 
+  
   <div class="main-container">
 
     <div class="introduction">
@@ -253,7 +257,7 @@
         <div class="counter2">
           <h5>Empowered</h5>
           <h5 class="counting2"></h5>
-          <h5>families through skill development programs.</h5>
+          <h5>families through skill<br> development programs.</h5>
         </div>
         <div class="counter3">
           <h5>Reduced plastic waste by</h5>
@@ -263,7 +267,7 @@
         <div class="counter4">
           <h5>Educated</h5>
           <h5 class="counting4"></h5>
-          <h5>children about sustainability and eco-friendly practices.</h5>
+          <h5>children about sustainability<br> and eco-friendly practices.</h5>
         </div>
       </div>
     
@@ -280,7 +284,7 @@
           <div class="team-cards">
             <div class="team-member">
               <div class="team-img">
-                <img loading="lazy" src="g4.jpeg" alt="Team Member 1">
+                <img loading="lazy" src="Sushant.jpeg" alt="Team Member 1">
               </div>
               <div class="team-info">
                 <h6>Mr. Sumit Singh</h6>
@@ -295,7 +299,7 @@
 
             <div class="team-member">
               <div class="team-img">
-                <img loading="lazy" src="Sushant.jpeg" alt="Team Member 2">
+                <img loading="lazy" src="g4.jpeg" alt="Team Member 2">
               </div>
               <div class="team-info">
                 <h6>Mr. Sushant Kumar</h6>
@@ -429,7 +433,7 @@
     <footer class="footer">
       <div class="footerRow">
         <div id="firstFooterCol" class="footercol">
-            <img class="logo" src="HIM VILLAGE E image.png" alt="">
+            <img class="logo" src="HIM VILLAGE E.png" alt="">
             <p class="aboutInFooter">We are dedicated to preserving the natural beauty of the Himalayas: Himachal, and Uttarakhand by empowering rural communities. Through education, waste management, and sustainable practices.</p>
         </div>
         <div id="office" class="footercol">
@@ -524,6 +528,19 @@
       </div>
   </footer>
   </div>
+
+  <!-- Script for active class -->
+
+  <script>
+		const activePage = window.location.pathname;
+		const navLinks = document.querySelectorAll('nav a').forEach(link => {
+			if(link.href.includes(`${activePage}`)){
+				link.classList.add('active');
+				console.log(link);
+			}
+			
+		})
+	</script>
     
 <!--out impact script-->
   <script>
@@ -579,6 +596,22 @@
       }
     }, 1)
   </script>
+
+<script>
+  const parentContainer = document.querySelector('.about-us-text')
+  parentContainer.addEventListener('click' ,event=>{
+    const current = event.target;
+    const isReadMoreBtn = current.className.includes('read-more-btn')
+    if(!isReadMoreBtn)return;
+
+    const currentText = event.target.parentNode.querySelector('.read-more-text')
+
+    currentText.classList.toggle('read-more-text--show');
+
+    current.textContent = current.textContent.includes('Read More') ? 
+    "Read More..." : "Read Less...";
+  })
+</script>
 
   <!--team script-->
 
