--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ function scrollTeamLeft() {
                 <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group form-group-half" style="width: 100%;">
-              <label for="subject">Subject :</label>
+              <label for="subject">Subject</label>
               <input type="text" id="subject" name="subject" required>
             </div>
             <div class="form-group">
