--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@ function scrollTeamLeft() {
             <li><a href="">How we use data</a></li>
             <li><a href="">Where we work</a></li>
             <li><a href="">Stories from field</a></li>
-            <li><a href="">Blogs</a></li>
+            <li><a href="blog.html">Blogs</a></li>
             <li><a href="">Visit Gallery</a></li>
             </ul>
       </div>
