--- a/index.html
+++ b/index.html
@@ -409,99 +409,72 @@ function scrollTeamLeft() {
 }
 </script>
 
+ <section class="section7">
 
-  <section class="section7">
-
-    <h2 id="gallery-heading">Our Gallery</h2>
+    <h2>Our Gallery</h2>
     <p>Explore the beauty of the Himalayas and the impact of our initiatives through our gallery of images and videos.</p>
 
-    <section class="photo-gallery">
-        <div class="gallery">
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g1.jpg" alt="Image 1">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g2.jpg" alt="Image 2">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g3.jpg" alt="Image 3">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g4.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g5.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g6.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g7.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g8.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g9.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g10.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g11.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g12.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g13.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g14.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item">
-                <div class="hexagon">
-                    <img  src="gallery/g15.jpg" alt="Image 4">
-                </div>
-            </div>
-            <div class="gallery-item" id="gallery-img">
-                <div class="hexagon">
-                    <img src="gallery/g16.jpg" alt="Image 16">
-                </div>
-            </div>
-        </div>
-    </section>
+<!--- Flip on Y axis --->
+<section class="photo-gallery">
+  <div class="gallery">
+
+<div class = "dm-flip-card">
+   <div class = "dm-front-card">
+    </div>
+   <div class = "dm-back-card">
+    </div>
+  </div>
+  
+  <!--- Flip on X axis --->
+  
+  <div class = "dm-flip-card2">
+   <div class = "dm-front-card2">
+       </div>
+     <div class = "dm-back-card2">
+       </div>
+ </div>
+ <div class = "dm-flip-card3">
+  <div class = "dm-front-card3">
+      </div>
+    <div class = "dm-back-card3">
+      </div>
+</div>
+<div class = "dm-flip-card4">
+  <div class = "dm-front-card4">
+      </div>
+    <div class = "dm-back-card4">
+      </div>
+</div>
 
 
-  </section>
+<div class = "dm-flip-card5">
+  <div class = "dm-front-card5">
+      </div>
+    <div class = "dm-back-card5">
+      </div>
+</div>
+<div class = "dm-flip-card6">
+  <div class = "dm-front-card6">
+      </div>
+    <div class = "dm-back-card6">
+      </div>
+</div>
+<div class = "dm-flip-card7">
+  <div class = "dm-front-card7">
+      </div>
+    <div class = "dm-back-card7">
+      </div>
+</div>
+<div class = "dm-flip-card8">
+  <div class = "dm-front-card8">
+      </div>
+    <div class = "dm-back-card8">
+      </div>
+</div>
+</div>
+</section>
+
+
 
   <section class="section8">
     <div id="volunteer-ready">    
